--- a/src/main/resources/templates/product/order.html
+++ b/src/main/resources/templates/product/order.html
@@ -12,7 +12,7 @@
 <th:block layout:fragment="script">
   <script th:src="@{//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js}"></script>
   <script type="text/javascript" th:src="@{/js/product/postcode.js}"></script>
-  <script type="text/javascript" th:src="@{/js/order/list.js}"></script>
+  <script type="text/javascript" th:src="@{/js/order/order.js}"></script>
 </th:block>
 
 <body>
